--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "": "file:",
-    "astro": "^5.5.5"
+    "@astrojs/react": "^4.2.2",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "astro": "^5.5.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
